--- a/grupoA/public-html/index.html
+++ b/grupoA/public-html/index.html
@@ -2,4 +2,8 @@
  <head>
   <title>this is the title</title>
  </head>
+ <body>
+  <h1>My Heading</h1>
+  <p>This is the first paragraph of text.</p>
+ </body>
 </html>
